
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-06-07 ruhllatio
	Chg: Change DATEDIFF constraints to constant comparisons to allow index scan
2016-06-07 DariusIII
	Fix: Revert Gamma to use customized utils.js and not the shared one. Fixes issue #2166
2016-06-06 niel
	Chg: Update minimum PHP requirements to 5.6.20+
	Mrg: Update schema to use groups_id instead of group_id. Note this does note affect CBPM tables which will be done in a separate commit.
2016-06-06 DariusIII
	Chg: Enable third pre channel, remove bad sources from ircscraper_settings_example and IRCScraper class.
2016-06-05 ruhllatio
	Fix: Fallback TV search now returns only specific episodes / also fix Season pack lookups
2016-06-03 ruhllatio
	Fix: TV Processing returns alias for wrong show first instead of direct show title match
	Fix: Local lookup not working for airdates because Sxx/Exx is still being set as junk data
2016-06-03 DariusIII
	Add: Add multiple channels support to IRCScraper
2016-06-02 ruhllatio
	Add: JSON Response formatting
	Fix: Need additional enclosure in TV Search API post-query check
	Fix: Additional issues with TV API search logic
	Add: Support for Season only searches with fast TV query
	Chg: Improve JSON Response class and refactor to make it like XML class
	Chg: Change some dates in the output to not use RSS style as they are not RSS attributes
2016-06-01 ruhllatio
	Mrg: PR - Feature media #2153
	Fix: Regex error in SP from #2153
	Chg: Make nzb-export comments reflect a more specific date format
	Fix: nzb-import using filenames as searchname now strips .gz as well as .nzb
	Mrg: PR - Feature apixmlwrite #2155
	Fix: Caps category issue caused by final class moves