@@ -43,28 +43,28 @@ class AniDB
 	{
 		// FIXME fix the missing variables for this query
 		$this->pdo->queryExec(
-					sprintf('
-						UPDATE anidb_titles AS at INNER JOIN anidb_info ai USING (anidbid) SET title = %s, type = %s, startdate = %s, enddate = %s,
-							related = %s, similar = %s, creators = %s, description = %s, rating = %s,
-							categories = %s, characters = %s, epnos = %s, airdates = %s,
-							episodetitles = %s, unixtime = %d WHERE anidbid = %d',
-						$this->pdo->escapeString($title),
-						$this->pdo->escapeString($type),
-						$this->pdo->escapeString($startdate),
-						$this->pdo->escapeString($enddate),
-						$this->pdo->escapeString($related),
-						$this->pdo->escapeString($similar),
-						$this->pdo->escapeString($creators),
-						$this->pdo->escapeString($description),
-						$this->pdo->escapeString($rating),
-						$this->pdo->escapeString($categories),
-						$this->pdo->escapeString($characters),
-						$this->pdo->escapeString($epnos),
-						$this->pdo->escapeString($airdates),
-						$this->pdo->escapeString($episodetitles),
-						$anidbID,
-						time()
-					)
+			sprintf('
+				UPDATE anidb_titles AS at INNER JOIN anidb_info ai USING (anidbid) SET title = %s, type = %s, startdate = %s, enddate = %s,
+					related = %s, similar = %s, creators = %s, description = %s, rating = %s,
+					categories = %s, characters = %s, epnos = %s, airdates = %s,
+					episodetitles = %s, unixtime = %d WHERE anidbid = %d',
+				$this->pdo->escapeString($title),
+				$this->pdo->escapeString($type),
+				$this->pdo->escapeString($startdate),
+				$this->pdo->escapeString($enddate),
+				$this->pdo->escapeString($related),
+				$this->pdo->escapeString($similar),
+				$this->pdo->escapeString($creators),
+				$this->pdo->escapeString($description),
+				$this->pdo->escapeString($rating),
+				$this->pdo->escapeString($categories),
+				$this->pdo->escapeString($characters),
+				$this->pdo->escapeString($epnos),
+				$this->pdo->escapeString($airdates),
+				$this->pdo->escapeString($episodetitles),
+				$anidbID,
+				time()
+			)
 		);
 	}
 
@@ -76,14 +76,14 @@ class AniDB
 	public function deleteTitle($anidbID)
 	{
 		$this->pdo->queryExec(
-					sprintf('
-						DELETE at, ai, ae
-						FROM anidb_titles AS at
-						LEFT OUTER JOIN anidb_info ai USING (anidbid)
-						LEFT OUTER JOIN anidb_episodes ae USING (anidbid)
-						WHERE anidbid = %d',
-						$anidbID
-					)
+			sprintf('
+				DELETE at, ai, ae
+				FROM anidb_titles AS at
+				LEFT OUTER JOIN anidb_info ai USING (anidbid)
+				LEFT OUTER JOIN anidb_episodes ae USING (anidbid)
+				WHERE anidbid = %d',
+				$anidbID
+			)
 		);
 	}
 
@@ -96,31 +96,33 @@ class AniDB
 	 */
 	public function getAnimeList($letter = '', $animetitle = '')
 	{
-		$regex = 'REGEXP';
-		$rsql = '';
+		$rsql = $tsql = '';
 
 		if ($letter != '') {
 			if ($letter == '0-9') {
 				$letter = '[0-9]';
 			}
-			$rsql .= sprintf('AND at.title %s %s', $regex, $this->pdo->escapeString('^' . $letter));
+			$rsql .= sprintf('AND at.title REGEXP %s', $this->pdo->escapeString('^' . $letter));
 		}
 
-		$tsql = '';
 		if ($animetitle != '') {
 			$tsql .= sprintf('AND at.title %s', $this->pdo->likeString($animetitle, true, true));
 		}
 
 		return $this->pdo->queryDirect(
-			sprintf('SELECT at.anidbid, at.title, ai.type, ai.categories, ai.rating, ai.startdate, ai.enddate
-					FROM anidb_titles at
-					LEFT JOIN anidb_info ai USING (anidbid)
-					INNER JOIN releases r ON at.anidbid = r.anidbid
-					WHERE at.anidbid > 0 %s %s
-					GROUP BY at.anidbid
-					ORDER BY at.title ASC',
-					$rsql,
-					$tsql
+			sprintf('
+				SELECT at.anidbid, at.title,
+					ai.type, ai.categories, ai.rating, ai.startdate, ai.enddate
+				FROM anidb_titles at
+				LEFT JOIN anidb_info ai USING (anidbid)
+				STRAIGHT_JOIN releases r ON at.anidbid = r.anidbid
+				WHERE at.anidbid > 0 %s %s
+				AND r.categories_id = %d
+				GROUP BY at.anidbid
+				ORDER BY at.title ASC',
+				$rsql,
+				$tsql,
+				Category::TV_ANIME
 			)
 		);
 	}
@@ -147,14 +149,17 @@ class AniDB
 		}
 
 		return $this->pdo->query(
-			sprintf('SELECT at.anidbid, GROUP_CONCAT(at.title SEPARATOR ", ") AS title, ai.description
-					FROM anidb_titles AS at LEFT JOIN anidb_info AS ai USING (anidbid)
-					WHERE 1=1 %s
-					AND at.lang = "en"
-					GROUP BY at.anidbid
-					ORDER BY at.anidbid ASC %s',
-					$rsql,
-					$limit
+			sprintf("
+				SELECT at.anidbid, GROUP_CONCAT(at.title SEPARATOR ', ') AS title,
+					ai.description
+				FROM anidb_titles AS at
+				LEFT JOIN anidb_info AS ai USING (anidbid)
+				WHERE 1=1 %s
+				AND at.lang = 'en'
+				GROUP BY at.anidbid
+				ORDER BY at.anidbid ASC %s",
+				$rsql,
+				$limit
 			)
 		);
 	}
@@ -173,8 +178,10 @@ class AniDB
 		}
 
 		$res = $this->pdo->queryOneRow(
-			sprintf('SELECT COUNT(DISTINCT at.anidbid) AS num
-				FROM anidb_titles AS at LEFT JOIN anidb_info AS ai USING (anidbid)
+			sprintf('
+				SELECT COUNT(DISTINCT at.anidbid) AS num
+				FROM anidb_titles AS at
+				LEFT JOIN anidb_info AS ai USING (anidbid)
 				WHERE 1=1
 				%s',
 				$rsql
@@ -193,14 +200,17 @@ class AniDB
 	public function getAnimeInfo($anidbID)
 	{
 		$animeInfo = $this->pdo->query(
-			sprintf('SELECT at.anidbid, at.lang, at.title,
-				ai.startdate, ai.enddate, ai.updated, ai.related, ai.creators, ai.description,
-				ai.rating, ai.picture, ai.categories, ai.characters, ai.type, ai.similar
-				FROM anidb_titles AS at LEFT JOIN anidb_info ai USING (anidbid)
+			sprintf('
+				SELECT at.anidbid, at.lang, at.title,
+					ai.startdate, ai.enddate, ai.updated, ai.related, ai.creators, ai.description,
+					ai.rating, ai.picture, ai.categories, ai.characters, ai.type, ai.similar
+				FROM anidb_titles AS at
+				LEFT JOIN anidb_info AS ai USING (anidbid)
 				WHERE at.anidbid = %d',
 				$anidbID
 			)
 		);
+
 		return isset($animeInfo[0]) ? $animeInfo[0] : false;
 	}
 
