@@ -84,8 +84,8 @@ class AniDB
 
 			$this->padb = new \nzedb\db\populate\AniDB(
 				[
-				   'Echo'     => $this->echooutput,
-				   'Settings' => $this->pdo
+					'Echo'     => $this->echooutput,
+					'Settings' => $this->pdo
 				]
 			);
 
@@ -94,11 +94,11 @@ class AniDB
 				if ($matched === false) {
 					$this->pdo->queryExec(
 						sprintf('
-								UPDATE releases
-								SET anidbid = %d
-								WHERE id = %d',
-								$this->status,
-								$release['id']
+							UPDATE releases
+							SET anidbid = %d
+							WHERE id = %d',
+							$this->status,
+							$release['id']
 						)
 					);
 				}
@@ -156,16 +156,19 @@ class AniDB
 		) {
 			$matches['epno'] = (int)$matches['epno'];
 			if (in_array($matches['epno'], ['Movie', 'OVA'])) {
-				$matches['epno'] = (int)1;
+				$matches['epno'] = 1;
 			}
 		} else if (preg_match('/^(\[[a-zA-Z\.\-!?]+\][\s_]*)?(\[BD\])?(\[\d{3,4}[ip]\])?(?P<title>[\w\s_.+!?\'-\(\)]+)(New Edit|(Blu-?ray)?( ?Box)?( ?Set)?)?\s*[\(\[](BD|\d{3,4}[ipx])/i',
 			$cleanName,
 			$matches)
 		) {
-			$matches['epno'] = (int)1;
+			$matches['epno'] = 1;
 		} else {
 			if (nZEDb_DEBUG) {
-				$this->pdo->log->doEcho(PHP_EOL . "Could not parse searchname {$cleanName}.", true);
+				$this->pdo->log->doEcho(
+					PHP_EOL . "Could not parse searchname {$cleanName}.",
+					true
+				);
 			}
 			$this->status = self::PROC_EXTFAIL;
 		}
@@ -235,7 +238,7 @@ class AniDB
 						$this->padb->populateTable('info', $anidbId['anidbid']);
 						$this->doRandomSleep();
 						$updatedAni = $this->checkAniDBInfo($anidbId['anidbid']);
-						$type       = 'Remote';
+						$type = 'Remote';
 					} else {
 						echo PHP_EOL .
 							$this->pdo->log->info("This AniDB ID was not found to be accurate locally, but has been updated too recently to check AniDB.") .
@@ -259,13 +262,15 @@ class AniDB
 				$matched = true;
 			} else {
 				if (nZEDb_DEBUG) {
-					$this->pdo->log->doEcho(PHP_EOL .
-					"Could not match searchname: {$release['searchname']}.",
-					true);
+					$this->pdo->log->doEcho(
+						PHP_EOL . "Could not match searchname: {$release['searchname']}.",
+						true
+					);
 				}
 				$this->status = self::PROC_NOMATCH;
 			}
 		}
+
 		return $matched;
 	}
 
