@@ -10,6 +10,7 @@ For details of when a commit makes it into the stable branch see the ReleaseNote
 
 2016-06-07 ruhllatio
 	Chg: Change DATEDIFF constraints to constant comparisons to allow index scan
+	Chg: AniDB site query optimization and code cleanup (indentations)
 2016-06-07 DariusIII
 	Fix: Revert Gamma to use customized utils.js and not the shared one. Fixes issue #2166
 2016-06-06 niel
